client get, list, creation handlers
